update: dev, stage, prod workflow

--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -1,19 +1,17 @@
-name: CI for prod Environment
+name: CI cache for prod Environment
 
 on:
   pull_request:
     paths:
       - 'infrastructure/envs/prod/**'
+  push:
+    paths:
+      - '*'
+  workflow_dispatch:
 
 jobs:
   prod-ci:
     runs-on: ubuntu-latest
-
-    env:
-      AWS_ACCESS_KEY_ID: test
-      AWS_SECRET_ACCESS_KEY: test
-      AWS_REGION: us-east-1
-      LOCALSTACK_HOST: http://localhost:4566
 
     steps:
       - name: Checkout repository
@@ -25,49 +23,72 @@ jobs:
       - name: Setup Terragrunt
         uses: autero1/action-terragrunt@v3
         with:
-          terragrunt-version: 0.56.3
+          terragrunt-version: 0.81.7
 
       - name: Setup Infracost
         uses: infracost/actions/setup@v2
         with:
           api-key: ${{ secrets.INFRACOST_API_KEY }}
 
-      - name: Check Terraform formatting
-        run: terraform fmt -check -recursive infrastructure/envs/prod
+      - name: Install Checkov
+        run: pip install checkov
+
+      - name: Set plugin cache environment variable
+        run: echo "TF_PLUGIN_CACHE_DIR=$HOME/.terraform.d/plugin-cache" >> $GITHUB_ENV
+
+      - name: Ensure plugin cache directory exists
+        run: mkdir -p "$TF_PLUGIN_CACHE_DIR"
 
       - name: Check Terragrunt HCL formatting
-        run: terragrunt hclfmt --check --recursive infrastructure/envs/prod
-
-      - name: Initialize with Terragrunt
-        run: terragrunt init --working-dir infrastructure/envs/prod
+        run: terragrunt hcl format
 
       - name: Validate Terragrunt configuration
-        run: terragrunt validate --working-dir infrastructure/envs/prod
+        run: terragrunt hcl validate
 
-      - name: Terragrunt Plan and Generate JSON
+      - name: Run Checkov on each Terragrunt module and generate report
         run: |
-          terragrunt plan \
-            --all \
-            --working-dir infrastructure/envs/prod \
-            -out=tf.plan
-          terraform show -json tf.plan > infrastructure/envs/prod/tf.json
+          CHECKOV_DIR="$GITHUB_WORKSPACE/checkov-reports"
+          mkdir -p "$CHECKOV_DIR"
 
-      - name: Run Checkov static analysis
-        run: checkov -f infrastructure/envs/prod/tf.json
+          for dir in infrastructure/envs/prod/*/; do
+            echo "🔍 Running Checkov for module: $dir"
+            cd "$dir"
 
-      - name: Run custom policies (if present)
-        run: |
-          if [ -d custom_policies ]; then
-            checkov -f infrastructure/envs/prod/tf.json --external-checks-dir custom_policies
-          fi
+            TF_PLUGIN_CACHE_DIR="$TF_PLUGIN_CACHE_DIR" terragrunt init --parallelism=40
+            TF_PLUGIN_CACHE_DIR="$TF_PLUGIN_CACHE_DIR" terragrunt plan -out=tf.plan
+            terragrunt show -json tf.plan > tf.json
+
+            echo "Running inbuilt Checkov policies"
+            checkov --file tf.json --output json --soft-fail > checkov-report.json || echo "Checkov failed"
+            if [ -s checkov-report.json ]; then
+              cp checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov.json"
+            else
+              echo "⚠️ checkov-report.json not found or empty for $dir"
+            fi
+
+            echo "Running custom Checkov policies"
+            if [ -d "$GITHUB_WORKSPACE/custom_policies" ]; then
+              checkov --skip-path tf.json --skip-check CKV* -d .terragrunt-cache  --external-checks-dir "$GITHUB_WORKSPACE/custom_policies/terraform" --output json --soft-fail > custom-checkov-report.json || echo "Custom Checkov failed"
+              if [ -s custom-checkov-report.json ]; then
+                cp custom-checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov-custom.json"
+              else
+                echo "⚠️ custom-checkov-report.json not found or empty for $dir"
+              fi
+            else
+              echo "No custom policies found"
+            fi
+
+            cd - > /prod/null
+          done
 
       - name: Run Infracost breakdown
+        env:
+          INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         run: |
           infracost breakdown \
-            --path=infrastructure/envs/prod/tf.json \
+            --path=infrastructure/envs/prod \
             --usage-file=infracost/infracost-usage.yml \
-            --format=github-comment \
-            --show-skipped \
+            --format=json \
             --out-file=infracost-prod.json
 
       - name: Generate Infracost HTML report
@@ -77,15 +98,30 @@ jobs:
             --format=html \
             --out-file=infracost-report-prod.html
 
-      - name: Upload Infracost report artifact
+      - name: Generate Infracost GitHub comment
+        run: |
+          infracost output \
+            --path=infracost-prod.json \
+            --format=github-comment \
+            --out-file=infracost-comment.json
+
+      - name: Upload Infracost reports
         uses: actions/upload-artifact@v4
         with:
-          name: infracost-report-prod
-          path: infracost-report-prod.html
+          name: infracost-reports
+          path: |
+            infracost-report-prod.html
+            infracost-comment.json
 
-      # Optional: Uncomment if you're using LocalStack + Terratest
-      # - name: Start LocalStack
-      #   run: docker run -d -p 4566:4566 localstack/localstack-light
+      - name: Upload Checkov reports
+        if: always()  # Run even if prior step fails
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkov-reports
+          path: checkov-reports/
 
-      # - name: Run Terratest (S3 test)
-      #   run: go test -v tests/s3_test.go
+      - name: Debug Checkov Report Contents (Optional)
+        if: always()
+        run: |
+          echo "📄 Listing Checkov reports:"
+          ls -R checkov-reports || echo "❌ No reports found"
