--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -1,25 +1,17 @@
-name: CI for Dev Environment
+name: CI cache for Dev Environment
 
 on:
   pull_request:
     paths:
       - 'infrastructure/envs/dev/**'
-
   push:
     paths:
       - '*'
-
   workflow_dispatch:
 
 jobs:
   dev-ci:
     runs-on: ubuntu-latest
-
-    env:
-      AWS_ACCESS_KEY_ID: test
-      AWS_SECRET_ACCESS_KEY: test
-      AWS_REGION: us-east-1
-      LOCALSTACK_HOST: http://localhost:4566
 
     steps:
       - name: Checkout repository
@@ -41,50 +33,62 @@ jobs:
       - name: Install Checkov
         run: pip install checkov
 
+      - name: Set plugin cache environment variable
+        run: echo "TF_PLUGIN_CACHE_DIR=$HOME/.terraform.d/plugin-cache" >> $GITHUB_ENV
+
+      - name: Ensure plugin cache directory exists
+        run: mkdir -p "$TF_PLUGIN_CACHE_DIR"
+
       - name: Check Terragrunt HCL formatting
-        run: terragrunt hcl format 
+        run: terragrunt hcl format
 
       - name: Validate Terragrunt configuration
-        run: terragrunt hcl validate 
+        run: terragrunt hcl validate
 
-      - name: Initialize with Terragrunt
-        run: terragrunt init --working-dir infrastructure/envs/dev --all
-
-      - name: Run Checkov on each Terragrunt module
-        working-directory: infrastructure/envs/dev
+      - name: Run Checkov on each Terragrunt module and generate report
         run: |
-          for dir in $(find . -mindepth 1 -maxdepth 1 -type d); do
+          CHECKOV_DIR="$GITHUB_WORKSPACE/checkov-reports"
+          mkdir -p "$CHECKOV_DIR"
+
+          for dir in infrastructure/envs/dev/*/; do
             echo "🔍 Running Checkov for module: $dir"
             cd "$dir"
 
-            terragrunt plan -out=tf.plan
-            terraform show -json tf.plan > tf.json
+            TF_PLUGIN_CACHE_DIR="$TF_PLUGIN_CACHE_DIR" terragrunt init --parallelism=40
+            TF_PLUGIN_CACHE_DIR="$TF_PLUGIN_CACHE_DIR" terragrunt plan -out=tf.plan
+            terragrunt show -json tf.plan > tf.json
 
-            if [ -d ../../../custom_policies ]; then
-              checkov --file tf.json --external-checks-dir ../../../custom_policies
+            echo "Running inbuilt Checkov policies"
+            checkov --file tf.json --output json --soft-fail > checkov-report.json || echo "Checkov failed"
+            if [ -s checkov-report.json ]; then
+              cp checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov.json"
             else
-              checkov --file tf.json
+              echo "⚠️ checkov-report.json not found or empty for $dir"
+            fi
+
+            echo "Running custom Checkov policies"
+            if [ -d "$GITHUB_WORKSPACE/custom_policies" ]; then
+              checkov --skip-path tf.json --skip-check CKV* -d .terragrunt-cache  --external-checks-dir "$GITHUB_WORKSPACE/custom_policies/terraform" --output json --soft-fail > custom-checkov-report.json || echo "Custom Checkov failed"
+              if [ -s custom-checkov-report.json ]; then
+                cp custom-checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov-custom.json"
+              else
+                echo "⚠️ custom-checkov-report.json not found or empty for $dir"
+              fi
+            else
+              echo "No custom policies found"
             fi
 
             cd - > /dev/null
           done
 
-      - name: Terragrunt Plan and Generate JSON for Infracost
-        run: |
-          terragrunt plan \
-            --all \
-            --working-dir infrastructure/envs/dev \
-            -out=tf.plan
-
-          terraform show -json tf.plan > infrastructure/envs/dev/tf.json
-
       - name: Run Infracost breakdown
+        env:
+          INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         run: |
           infracost breakdown \
-            --path=infrastructure/envs/dev/tf.json \
+            --path=infrastructure/envs/dev \
             --usage-file=infracost/infracost-usage.yml \
-            --format=github-comment \
-            --show-skipped \
+            --format=json \
             --out-file=infracost-dev.json
 
       - name: Generate Infracost HTML report
@@ -94,8 +98,30 @@ jobs:
             --format=html \
             --out-file=infracost-report-dev.html
 
-      - name: Upload Infracost report artifact
+      - name: Generate Infracost GitHub comment
+        run: |
+          infracost output \
+            --path=infracost-dev.json \
+            --format=github-comment \
+            --out-file=infracost-comment.json
+
+      - name: Upload Infracost reports
         uses: actions/upload-artifact@v4
         with:
-          name: infracost-report-dev
-          path: infracost-report-dev.html
+          name: infracost-reports
+          path: |
+            infracost-report-dev.html
+            infracost-comment.json
+
+      - name: Upload Checkov reports
+        if: always()  # Run even if prior step fails
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkov-reports
+          path: checkov-reports/
+
+      - name: Debug Checkov Report Contents (Optional)
+        if: always()
+        run: |
+          echo "📄 Listing Checkov reports:"
+          ls -R checkov-reports || echo "❌ No reports found"
